Closed Bug 615842 Opened 14 years ago Closed 13 years ago

comparison between signed and unsigned integer expressions in ReadStrings

Categories

(Toolkit :: General, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b12

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

746 bytes, patch
robert.strong.bugs
: review+
mossop
: approval2.0+
Details | Diff | Splinter Review
toolkit/mozapps/readstrings/readstrings.cpp:
 In function ‘int ReadStrings(const NS_tchar*, const char*, unsigned int, char (*)[200], const char*)’:
183: warning: comparison between signed and unsigned integer expressions
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #494357 - Flags: review?(robert.bugzilla)
Attachment #494357 - Flags: approval2.0?
Attachment #494357 - Flags: review?(robert.bugzilla) → review+
Attachment #494357 - Flags: approval2.0? → approval2.0+
Keywords: checkin-needed
http://hg.mozilla.org/mozilla-central/rev/e87ba550a5d7
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b12
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: