Bug 615842 - comparison between signed and unsigned integer expressions in ReadStrings. r=rstrong a=mossop